@@ -56,4 +56,5 @@
   13-Mar-2023  - V0.64 Add CARDTargetAnnotationProvider (to replace CARDTargetFeatureProvider)
   22-Mar-2023  - V0.65 Add timeout to IMGT data file fetch, and update py-rcsb_exdb_assets locators
   24-Mar-2023  - V0.66 In PharosTargetProvider(), download sql file to separate dir
-  11-Apr-2023  - V0.67 Fix issue with lineage tree building--handle cases with two parents at same depth; Add treeNodeList building and exporting
+  11-Apr-2023  - V0.67 Fix issue with CARD lineage tree building--handle cases with two parents at same depth; Add treeNodeList building and exporting
+  27-Apr-2023  - V0.68 Update CARD treeNodeList building
